test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: source-secret
  namespace: pol-clone-nosync-delete-trigger-ns
type: Opaque
