test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/downstream.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: downstream-secret
  namespace: pol-clone-nosync-delete-trigger-ns
type: Opaque
