test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/trigger.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: pol-clone-nosync-delete-trigger-ns
