test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: Policy
metadata:
  name: pol-clone-nosync-delete-trigger-policy
  namespace: pol-clone-nosync-delete-trigger-ns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
