test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/02-create-trigger.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create-trigger
spec:
  timeouts: {}
  try:
  - apply:
      file: trigger.yaml
  - assert:
      file: downstream.yaml
