test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/03-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: ConfigMap
      name: test-org
      namespace: pol-clone-nosync-delete-trigger-ns
