test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-delete-trigger/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-nosync-delete-trigger
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-clone-nosync-delete-trigger-policy
        - name: namespace
          value: pol-clone-nosync-delete-trigger-ns
  - name: step-02
    try:
    - apply:
        file: trigger.yaml
    - assert:
        file: downstream.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: test-org
          namespace: pol-clone-nosync-delete-trigger-ns
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - assert:
        file: downstream.yaml
